--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,9 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:columnCount="4">
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="7"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="8"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="9"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="+"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="4"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="5"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="6"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="x"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="1"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="2"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="3"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="-"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="."
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="0"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="="
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_columnWeight="1"
+            android:text="+"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"/>
+    </GridLayout>
+</LinearLayout>
